--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -76,7 +76,7 @@ a {
 a:focus, 
 a:hover {
     text-decoration: none;
-    color: #EB2B5D;
+    color: #eb2b5d;
 }
 
 .img_res{
@@ -88,7 +88,7 @@ a:hover {
 
 .img_res1{
     display: block;
-    width: 70%;
+    width: 100%;
     height: 100%;
     max-width: 100%;
 	margin:auto;
@@ -373,9 +373,9 @@ a:hover {
 /////////////////////////////////////////////////////////////////////*/
 
 #banner {
-    background: url(../img/bg2.jpg);
+    background: url(../img/gallery-bg.png);
     background-size: cover;
-    padding-top: 80px;
+    padding-top: 120px;
     background-attachment: fixed;
     position: relative;
 }
@@ -385,10 +385,18 @@ a:hover {
     color: #fff;
 }
 .headings h1 {
-    font-size: 40px;
+    font-size: 30px;
     font-weight: 300;
     padding-bottom: 20px;
 }
+
+.headings h3 {
+    font-size: 50px;
+    font-weight: 300;
+    padding-bottom: 40px;
+    margin-bottom: 40px;
+}
+
 .headings p {
     font-size: 18px;
     font-weight: 300;
@@ -465,6 +473,17 @@ a:hover {
   border-radius: 3px;
   text-align: center;
 }
+
+#teammembers .item{
+  padding: 0px 0px;
+  margin: 10px;
+  color: #FFF;
+  -webkit-border-radius: 3px;
+  -moz-border-radius: 3px;
+  border-radius: 3px;
+  text-align: center;
+}
+
 .customNavigation{
   text-align: center;
 }
@@ -524,7 +543,7 @@ a:hover {
     padding: 10px 10px 15px 10px;
 }
 .team-member h2 {
-    font-size: 35px;
+    font-size: 30px;
 }
 .team-social li a i {
     border: 1px solid;
@@ -956,7 +975,7 @@ input:-moz-placeholder, textarea:-moz-placeholder {
 /*992px*/
 
 @media all and (max-width: 992px) {
-    .headings h1,.headings p{
+    .headings h1,.headings p,.headings h3{
         text-align: center;
     }
     .block-title {
@@ -980,3 +999,98 @@ input:-moz-placeholder, textarea:-moz-placeholder {
         padding: 5px 0px;
     }
 }
+
+* {box-sizing:border-box}
+
+/* Slideshow container */
+.slideshow-container {
+  max-width: 500px;
+  position: relative;
+  margin: auto;
+}
+
+/* Hide the images by default */
+.mottoslide {
+  display: none;
+}
+
+/* Next & previous buttons */
+.prev, .next {
+  cursor: pointer;
+  position: absolute;
+  top: 50%;
+  width: auto;
+  margin-top: -22px;
+  padding: 16px;
+  color: white;
+  font-weight: bold;
+  font-size: 18px;
+  transition: 0.6s ease;
+  border-radius: 0 3px 3px 0;
+  user-select: none;
+}
+
+/* Position the "next button" to the right */
+.next {
+  right: 0;
+  border-radius: 3px 0 0 3px;
+}
+
+/* On hover, add a black background color with a little bit see-through */
+.prev:hover, .next:hover {
+  background-color: rgba(0,0,0,0.8);
+}
+
+/* Caption text */
+.text {
+  color: #f2f2f2;
+  font-size: 15px;
+  padding: 8px 12px;
+  position: absolute;
+  bottom: 8px;
+  width: 100%;
+  text-align: center;
+}
+
+/* Number text (1/3 etc) */
+.numbertext {
+  color: #f2f2f2;
+  font-size: 12px;
+  padding: 8px 12px;
+  position: absolute;
+  top: 0;
+}
+
+/* The dots/bullets/indicators */
+.dot {
+  cursor: pointer;
+  height: 15px;
+  width: 15px;
+  margin: 0 2px;
+  background-color: #bbb;
+  border-radius: 50%;
+  display: inline-block;
+  transition: background-color 0.6s ease;
+}
+
+.active, .dot:hover {
+  background-color: #717171;
+}
+
+/* Fading animation */
+.fade {
+  -webkit-animation-name: fade;
+  -webkit-animation-duration: 1.5s;
+  animation-name: fade;
+  animation-duration: 1.5s;
+}
+
+@-webkit-keyframes fade {
+  from {opacity: .4}
+  to {opacity: 1}
+}
+
+@keyframes fade {
+  from {opacity: .4}
+  to {opacity: 1}
+}}
